- Compatibility with grocy v3.x.x
- Incompatibility with grocy v2.7.x
- Design & navigation overhaul
- New pages: Overview, Inventory, Transfer & more
- Rewritten pages: Settings, Purchase, Consume & more
Changes since 2.0.0-beta05:
- Improved: Ability to enter dates with keyboard with new option (#394)
- Improved: Option to use smaller font on shopping mode page (#379)
- Improved: Focus product name field if empty on master product page init
- Improved: Focus product field if empty on shopping list item page init
- Improved: On shopping list item page tap done on keyboard when in notes field to save item
- Improved: On shopping list item page amount is prefilled with 1 (#406)
- Fixed: Sorting of entries on master data pages (#463) (thanks @Turysaz)
- Fixed: Occasional crash on stock overview page

2.0.0-beta05
This is the last beta before the final v2.0.0 release. Please report any issues that may have come up with the recent changes so that the final version is as bug-free as possible.
- New: Support for server version 3.1.3
- New: Native support for Android 12
- New: Preset option in stock settings for "Default due days" of new products
- Improved: Open Food Facts look up is back, together with page for linking new barcodes (#353)
- Improved: Deactivated features on server are now hidden (#397)
- Improved: Long press items on due date page from product to enter date instead of number (#458)
- Improved: In number input bottom sheet, always save number on dismiss
- Fixed: Crash when showing autocompletion results with large lists (#451)
- Fixed: Search on stock overview page with barcode

2.0.0-beta04
- New: Support for server version 3.1.2
- New: Redesigned filter bars
- Improved: (not F-Droid) No cropping of camera stream in ML Kit, add option for it
- Improved: Better handling of interrupted workflow in quick mode
- Improved: Inventory page now has stock info like on consume page
- Improved: Hide Open Food Facts option for now, because not implemented yet