@@ -455,12 +455,6 @@ public class PurchaseViewModel extends BaseViewModel {
       Bundle bundle = new Bundle();
       bundle.putString(ARGUMENT.BARCODE, barcode);
       sendEvent(Event.CHOOSE_PRODUCT, bundle);
-
-      if (true) return; // TODO: Focus after barcode action?
-
-      formData.getBarcodeLive().setValue(barcode);
-      formData.isFormValid();
-      sendEvent(Event.FOCUS_INVALID_VIEWS);
     }
   }
 
